--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
       <h2>Games</h2>
       <div id="games-list">
         <!-- Add more games here manually -->
-        
+        <div class="game">
+          <h3>Your Game Name</h3>
+          <p>Uploaded by: Your Name</p>
+          <a href="https://scratch.mit.edu/projects/1113918259/" target="_blank">Play Game</a>
+        </div>
+
       </div>
     </section>
   </div>
