--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scratch Game Hub</title>
+  <title>TitanBrix - Home</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 </head>
 <body>
   <header>
-    <h1>Scratch Game Hub</h1>
+    <h1>TitanBrix</h1>
   </header>
   <div class="container">
     <section id="upload-instructions">
