Edited Terms of Upload - also ADDED Template to game list

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <div id="games-list">
         <!-- Add more games here manually -->
         <div class="game">
-          <h3>Your Game Name</h3>
-          <p>Uploaded by: Your Name</p>
+          <h3>TEMPLATE</h3>
+          <p>Uploaded by: TitanBrix</p>
           <a href="https://scratch.mit.edu/projects/1113918259/" target="_blank">Play Game</a>
         </div>
 
@@ -105,7 +105,7 @@
       const mailtoLink = `mailto:Titanbrix@outlook.com?subject=${subject}&body=${body}`;
       window.location.href = mailtoLink;
 
-      alert('Your submission email has been opened in your email client. Please send the email to complete the submission. Make sure it explains the name, the link and whever it has been used with our telmplate or not!');
+      alert('Your submission email has been opened in your email client. Please send the email to complete the submission. Make sure it explains the name, the link and whever it has been used with our telmplate or not! Include your username.');
     }
   </script>
 </body>
