Terms edited but shown and exaggerated.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="container">
     <section id="upload-instructions">
       <h2>Submit Your Game</h2>
-      <p>To have your Scratch game uploaded, please fill out the form below and click "Submit." This will send an email to <strong>Titanbrix@outlook.com</strong>. To make sure it uploads, make sure it DOESN'T contain copyrighted material! I shall moderate if you used our template. Make sure that YOU DO.</p>
+      <p>To have your Scratch game uploaded, please fill out the form below and click "Submit." This will send an email to <strong>Titanbrix@outlook.com</strong>. To make sure it uploads, make sure it DOESN'T contain copyrighted material! I shall moderate if you used our template. Make sure that YOU DO. Not to mention that you MUST include your username. Thanks.</p>
       <form id="email-form" onsubmit="sendEmail(); return false;">
         <label for="game-name">Game Name:</label>
         <input type="text" id="game-name" placeholder="Enter the game name" required>
