--- a/index.html
+++ b/index.html
@@ -114,5 +114,11 @@
       alert('Your submission email has been opened in your email client. Please send the email to complete the submission. Make sure it explains the name, the link, and whether it has been used with our template or not! Include your username.');
     }
   </script>
+
+  <!-- Background Music -->
+  <audio autoplay loop>
+    <source src="bgm.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
