1ST GAME ADDED, WOOOO!

--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
 
         <!-- Other games with hidden iframe behavior -->
         <div class="game">
-          <h3>Another Game</h3>
-          <p>Uploaded by: Username</p>
+          <h3>NOOB SONG!</h3>
+          <p>Uploaded by: Castle_crasher_1000</p>
           <a href="javascript:void(0);" onclick="showIframe('game2');">Play Game</a>
           
           <!-- Hidden iframe -->
-          <iframe id="game2" src="https://scratch.mit.edu/projects/PROJECT_ID/embed" allowtransparency="true"></iframe>
+          <iframe id="game2" src="https://scratch.mit.edu/projects/195654195/embed" allowtransparency="true"></iframe>
         </div>
 
         <div class="game">
-          <h3>Yet Another Game</h3>
+          <h3>Coming soooon!</h3>
           <p>Uploaded by: Another User</p>
           <a href="javascript:void(0);" onclick="showIframe('game3');">Play Game</a>
           
