--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
     header {
       width: 100%;
       overflow: hidden;
+      text-align: center;
     }
     header img {
       width: 100%;
       height: auto;
+    }
+    header video {
+      width: 360px;
+      height: 280px;
+      margin-top: 10px;
     }
     .container {
       max-width: 800px;
@@ -75,6 +81,12 @@
 <body>
   <header>
     <img src="logo.png" alt="TitanBrix Logo">
+    
+    <!-- Add your video below the logo -->
+    <video controls>
+      <source src="your-video-file.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </header>
   
   <div class="container">
