pre-pre-pre-prehistoric Alpha, so..?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       width: 100%;
       height: auto;
     }
-    header video {
+    header iframe {
       width: 360px;
       height: 280px;
       margin-top: 10px;
@@ -82,11 +82,8 @@
   <header>
     <img src="logo.png" alt="TitanBrix Logo">
     
-    <!-- Add your video below the logo -->
-    <video controls>
-      <source src="your-video-file.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <!-- Embed YouTube video below the logo -->
+    <iframe width="360" height="280" src="https://www.youtube.com/embed/zwN_1K_jPdc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </header>
   
   <div class="container">
