--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       width: 100%;
       overflow: hidden;
       text-align: center;
+      padding-top: 10px;
     }
     header img {
       width: 100%;
