--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
   <div class="header-content">
     <img src="why.png" alt="Why Image">
     <div class="header-text">
-      <h2>Why Choose TitanBrix?</h2>
-      <p>At TitanBrix, we offer a unique platform for you to share your creativity. Submit your games and showcase your work to the world! Our community supports your effort to create without worrying about copyright issues. Join us today and get involved in the fun!</p>
+      <h2>TitanBrix? What the flip is that?!</h2>
+      <p>1) At TitanBrix, we offer a unique platform for you to share your creativity. 2) Submit your games and showcase your work to the world! 3) Our community supports your effort to create without worrying, so join us today and get involved in the fun!</p>
     </div>
   </div>
 
