--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
       max-width: 70%; /* Control the width of the text, adjust as needed */
     }
 
+    /* Flex container for the submit game and the header content (image + text) */
+    .top-content-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+      padding: 20px;
+    }
+
+    /* Submit Game Box */
+    .submit-game-box {
+      max-width: 45%; /* Adjust width of the submit game box */
+      background: rgba(255, 255, 255, 0.9); /* Slightly transparent white */
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
     .container {
       max-width: 800px;
       margin: 20px auto;
@@ -103,17 +120,10 @@
     <img src="logo.png" alt="TitanBrix Logo">
   </header>
 
-  <!-- New section with a semi-transparent curved background -->
-  <div class="header-content-wrapper">
-    <img src="why.png" alt="Why Image">
-    <div class="header-text">
-      <h2>TitanBrix? What the flip is that?!</h2>
-      <p>1) At TitanBrix, we offer a unique platform for you to share your creativity. 2) Submit your games and showcase your work to the world! 3) Our community supports your effort to create without worrying, so join us today and get involved in the fun!</p>
-    </div>
-  </div>
-
-  <div class="container">
-    <section id="upload-instructions">
+  <!-- Flex container for the image + text box and the submit game box -->
+  <div class="top-content-wrapper">
+    <!-- Left side: Submit Your Game Box -->
+    <div class="submit-game-box">
       <h2>Submit Your Game</h2>
       <p>To have your Scratch game uploaded, please fill out the form below and click "Submit." This will send an email to <strong>Titanbrix@outlook.com</strong>. To make sure it uploads, make sure it DOESN'T contain copyrighted material! I shall moderate if you used our template. Make sure that YOU DO. Not to mention that you MUST include your username. Thanks.</p>
       <form id="email-form" onsubmit="sendEmail(); return false;">
@@ -125,8 +135,19 @@
         
         <button type="submit">Submit</button>
       </form>
-    </section>
+    </div>
 
+    <!-- Right side: TitanBrix image + text -->
+    <div class="header-content-wrapper">
+      <img src="why.png" alt="Why Image">
+      <div class="header-text">
+        <h2>TitanBrix? What the flip is that?!</h2>
+        <p>1) At TitanBrix, we offer a unique platform for you to share your creativity. 2) Submit your games and showcase your work to the world! 3) Our community supports your effort to create without worrying, so join us today and get involved in the fun!</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
     <section id="games-section">
       <h2>Games</h2>
       <div id="games-list">
