--- a/index.html
+++ b/index.html
@@ -25,35 +25,13 @@
       height: auto;
     }
 
-    /* New section for image and text with a separate semi-transparent background */
-    .header-content-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-      background: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
-      border-radius: 15px; /* Rounded corners */
-      padding: 20px;
-      max-width: 800px;
-      margin: 20px auto; /* Centered on the page */
-    }
-
-    .header-content-wrapper img {
-      max-width: 25%; /* Image is now smaller, 25% of the container */
-      height: auto;
-      margin-right: 20px; /* Space between the image and the text */
-    }
-
-    .header-text {
-      max-width: 70%; /* Control the width of the text, adjust as needed */
-    }
-
-    /* Flex container for the submit game and the header content (image + text) */
+    /* Flex container for the image + text box and the submit game box */
     .top-content-wrapper {
       display: flex;
       justify-content: space-between;
-      margin-top: 20px;
+      margin-top: 40px; /* Increased margin for more gap */
       padding: 20px;
+      gap: 40px; /* Gap between the left and right boxes */
     }
 
     /* Submit Game Box */
@@ -63,6 +41,31 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      min-height: 400px; /* Ensures both boxes have the same height */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .header-content-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+      border-radius: 15px; /* Rounded corners */
+      padding: 20px;
+      max-width: 50%; /* Adjust size to fit layout */
+      min-height: 400px; /* Ensures both boxes have the same height */
+    }
+
+    .header-content-wrapper img {
+      max-width: 25%; /* Image size */
+      height: auto;
+      margin-right: 20px; /* Space between the image and the text */
+    }
+
+    .header-text {
+      max-width: 70%; /* Control the width of the text, adjust as needed */
     }
 
     .container {
