--- a/index.html
+++ b/index.html
@@ -37,9 +37,19 @@
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
+    .flex-container img {
+      display: block;
+      max-width: 100%;
+      margin-bottom: 10px;
+      border-radius: 8px;
+    }
     .container {
       max-width: 800px;
       margin: 20px auto;
+      background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     form {
       margin-bottom: 20px;
@@ -60,9 +70,6 @@
       color: white;
       border: none;
       cursor: pointer;
-    }
-    .games-section {
-      margin-top: 40px;
     }
     .games-section h2 {
       text-align: center;
@@ -115,6 +122,7 @@
     <!-- What is TitanBrix Section -->
     <div class="box">
       <section>
+        <img src="why.png" alt="Why Image">
         <h2>TitanBrix? What the flip is that?!</h2>
         <p>1) At TitanBrix, we offer a unique platform for you to share your creativity. 2) Submit your games and showcase your work to the world! 3) Our community supports your effort to create without worrying, so join us today and get involved in the fun!</p>
       </section>
